fixed the spacing on services page between image and paragraph, also fixed the size

--- a/less/index.less
+++ b/less/index.less
@@ -687,11 +687,11 @@ html {
 }
 
 .container14 {
-  width: 100%;
-  background-color: white;
-   display: flex;
+  width: 132%;
+  display: flex;
   flex-direction: row;
- 
+  background-color: white;
+
 }
 
 .container14 h3 {
@@ -704,15 +704,16 @@ html {
  }
 
 .text-content2 {
-  width: 50%;
-  padding-right:5%;
-  
+ width: 170%;
+  margin-right: 5%;
+
 }
 
 .construction-pic {
-  max-width: 100%;
+  width: 180%;
   margin-top: 16%;
-
+  
+ 
 }
 
 .container15 {
